# runtime-linker

./: CMakeLists.txt  Object.c  main.cpp  objectdir.h
include/: ObjOpen.hpp  objfcn.h
source/: ObjLoad.cpp  logging.cpp  logging.hpp  objsym.cpp  runtime_linker.hpp
test/: CMakeLists.txt  Object.c  main.cpp  objectdir.cpp.in  objectdir.h
